@startuml
title Parallel State Machine - Concurrent System

skinparam state {
  BackgroundColor<<normal>> White
  BorderColor<<normal>> Black
  FontSize 13
}

state "Parallel Machine" as Parallel {
  state "Component A" as CompA {
    state "A_Idle" as AIdle
    state "A_Active" as AActive
    [*] --> AIdle
    AIdle --> AActive : start
    AActive --> AIdle : stop
  }
  --
  state "Component B" as CompB {
    state "B_Idle" as BIdle
    state "B_Processing" as BProcessing
    state "B_Done" as BDone
    [*] --> BIdle
    BIdle --> BProcessing : data_ready
    BProcessing --> BDone : finish
    BDone --> BIdle : reset
  }
  --
  state "Component C" as CompC {
    state "C_Off" as COff
    state "C_On" as COn
    [*] --> COff
    COff --> COn : enable
    COn --> COff : disable
  }
}

note right of Parallel : Broadcast events synchronize\nall components simultaneously

[*] --> Parallel

@enduml
